# ros_catkin_ws

./: .gitignore  .gitmodules  README.md  build.sh  init.sh  install.sh  install_deps.sh  ros_catkin_ws.code-workspace  source.sh  template.code-workspace  template_catkin_ws.code-workspace  update.sh
.catkin_tools/profiles/default/: build.yaml
config/: catkin.conf  depends.conf  rosconfig.conf
scripts/: build-workspace.sh  download-template-commits.sh  init-workspace.sh  install-depends.sh  script-utils  set-default-workspace.sh
src/temp_pkg/: CMakeLists.txt  README.txt
src/temp_pkg/config/: template_node.yaml
src/temp_pkg/msg/: Bumper.msg  CliffSensors.msg
src/template_msg_pkg/: CMakeLists.txt  package.xml
src/template_msg_pkg/msg/: template_msg.msg
src/template_rospy_pkg/: README.txt  package.xml
src/template_rospy_pkg/launch/: template_node.launch
src/template_rospy_pkg/nodes/: template_node
src/template_rospy_pkg/scripts/: template_py_script  template_sh_script
src/template_rospy_pkg/src/template_rospy_pkg/: base_node.py  example_publisher.py  example_subscriber.py  template_node.py
src/template_rospy_pkg/src/template_rospy_pkg/utils/: config_util.py
