<?xml version="1.0"?>
<package format="2">
  <name>template_msg_pkg</name>
  <version>0.0.0</version>
  <description>The template_msg_pkg package</description>

  <maintainer email="daniel.kennedy.m1@gmail.com">Daniel Kennedy</maintainer>
  
  <license>TODO</license>


  <author email="daniel.kennedy.m1@gmail.com">Daniel Kennedy</author>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- Add/change depend tags if these messages
        depend on something besides std_msgs -->
  <depend>std_msgs</depend>


  <export>
  </export>
</package>
